added sitelog link on homepage

--- a/voiidfiish/index.html
+++ b/voiidfiish/index.html
@@ -19,6 +19,8 @@
     <p>I'd also like to join some webrings and really get into indie web type stuff!</p>
 
     <p>I am brand new to HTML/CSS/JS so this is going to be a learning project for me.</p>
+
+    <a href="/sitelog">Sitelog</a>
     
   </body>
 </html>
