added title to sitelog page

--- a/voiidfiish/sitelog/index.html
+++ b/voiidfiish/sitelog/index.html
@@ -6,6 +6,7 @@
         <title>Voiidfiish Site Log</title>
     </head>
     <body>
+        <h1>Sitelog</h1>
         <h2>23 August 2025</h2>
         <ul>
             <li>Added sitelog page.</li>
